--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jason Kwame Appiatu",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.20",
     "tailwindcss": "^3.2.4"
