--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.7.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
