--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
